# stl2bmp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  OffScreenRenderer.hpp  README.ja.md  README.md  README.txt.in  stl2bmp720.bat  stl2bmp_main.cpp  stl2bmp_version.hpp.in
data/: torus.stl
experiments/: CMakeLists.txt  glfwtest.cpp  osr.cpp
scripts/: bmp2png.bat  bmp2png.sh  stl2bmp720.bat
