CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(stl2bmp
        VERSION 1.0.0
        DESCRIPTION "Voxelization of binary STL files"
        HOMEPAGE_URL https://github.com/tmichi/stl2bmp
        LANGUAGES CXX)
IF(MSVC)
        SET(Eigen3_DIR "C:/eigen-3.4.0/cmake")
        SET(glfw3_DIR "C:/glfw-3.3.7/lib/cmake/glfw3")
ENDIF (MSVC)
SET(PACK_ENABLED 1)
SET(CMAKE_BUILD_TYPE Release) #Debug,RelWithDebInfo,MinSizeRel
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
FIND_PACKAGE(Eigen3 3.4 REQUIRED)
FIND_PACKAGE(glfw3 3.3 REQUIRED)
FIND_PACKAGE(GLEW 2.0 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
#FIND_PACKAGE(Boost 1.36.0 REQUIRED COMPONENTS filesystem system)
IF (UNIX)
        IF (APPLE)
                SET(CMAKE_MACOSX_RPATH 1)
                SET(CMAKE_CXX_FLAGS "-DGL_SILENCE_DEPRECATION -Wall -Wextra -pedantic -Wcast-align -Wcast-qual -Wconversion -Wdisabled-optimization -Wnon-virtual-dtor -Wfloat-equal -Winit-self -Winline -Wmissing-include-dirs -Woverloaded-virtual -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wsign-promo -Wswitch-default -Wswitch-enum -Wvariadic-macros -Wwrite-strings  -Wnon-virtual-dtor -Wold-style-cast")
                SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
                SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG ")
                SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
                SET(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -march=native")
        ELSEIF (CMAKE_COMPILER_IS_GNUCXX) #UNIX
                SET(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic")
                SET(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
                SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native")
                SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g3 -Og -pg")
                SET(CMAKE_CXX_FLAGS_MINSIZEREL "-Os -DNDEBUG -march=native")
        ELSE()
                MESSAGE(fatal, "Unknown platform")
        ENDIF ()
ELSEIF (MSVC) #Visual Studio
        #ADD_COMPILE_DEFINITIONS(/wd4244 /wd4819 /wd4127 /wd26495 /wd26451 /wd26812) #disable warnings
        SET(CMAKE_CXX_FLAGS "/W4 /EHsc")
ELSE ()
        MESSAGE(fatal, "Unknown platform")
ENDIF (UNIX)
ADD_SUBDIRECTORY(experiments)
CONFIGURE_FILE(stl2bmp_version.hpp.in stl2bmp_version.hpp)
CONFIGURE_FILE(README.txt.in README.txt)
ADD_EXECUTABLE(stl2bmp stl2bmp_main.cpp OffScreenRenderer.hpp)
TARGET_INCLUDE_DIRECTORIES(stl2bmp PRIVATE ${CMAKE_BINARY_DIR} .)
TARGET_LINK_LIBRARIES(stl2bmp PRIVATE Eigen3::Eigen glfw OpenGL::GL GLEW::GLEW)
ADD_CUSTOM_TARGET(check
        DEPENDS stl2bmp
        COMMAND stl2bmp ${CMAKE_SOURCE_DIR}/data/torus.stl
        )

IF (PACK_ENABLED)
        SET(SCRIPT_DIR "${CMAKE_SOURCE_DIR}/scripts")
        IF (MSVC)
                INSTALL(FILES ${SCRIPT_DIR}/stl2bmp720.bat ${SCRIPT_DIR}/bmp2png.bat DESTINATION .)
        ELSE ()
                INSTALL(FILES ${SCRIPT_DIR}/bmp2png.sh DESTINATION .)
        ENDIF ()
        INSTALL(TARGETS stl2bmp RUNTIME DESTINATION .)
        INSTALL(FILES ${CMAKE_BINARY_DIR}/README.txt ${CMAKE_SOURCE_DIR}/data/torus.stl DESTINATION .)
ELSE ()
        INSTALL(TARGETS stl2bmp RUNTIME DESTINATION bin)
ENDIF ()
set(CPACK_PACKAGE_VERSION_MAJOR "${stl2bmp_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${stl2bmp_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${stl2bmp_VERSION_PATCH}")
SET(CPACK_SOURCE_GENERATOR "ZIP")
INCLUDE(CPack)
